--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:Pager":"vue serve ./src/components/Pager/test.vue",
+    "test:Empty":"vue serve ./src/components/Empty/test.vue",
+    "test:ImageLoader":"vue serve ./src/components/ImageLoader/test.vue",
+    "test:Contact":"vue serve ./src/components/Contact/test.vue"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "less": "^4.1.1",
+    "less-loader": "^6.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -18,6 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^4.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
